--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
     color: rgb(196, 195, 195);
 }
 
-#generateTable, #downloadTable {
+#generateTable, #downloadTable, #clear {
     margin-top: 20px;
     padding: 10px 20px;
     background-color: #1d1d1d;
@@ -66,36 +66,56 @@ body {
 #downloadTable {
     display: none;
 }
+#clear {
+    display: none;
+}
 
 #tableContainer {
-    width: 95%;
+    min-width: 95%;
     padding: 1vw;
-    overflow: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-color: red; */
+    overflow: auto;
+    
+}
+::-webkit-scrollbar{
+    width: 6px;
+    height: 8px;
+}
+::-webkit-scrollbar-track{
+    background-color: #161616;
+    border-radius: 5px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #4d4a4a;
+    border-radius: 5px;
 }
 
 table {
-    width: 115vw;
+    width: 100vw;
     height: 100%;
     margin-bottom: 20px;
     background:#1d1d1d;
     margin-top: 3vw;
+    overflow: scroll;
+    /* table-layout: fixed; */
 }
 
 table, th, td {
     border: 1px solid gray;
     outline: none;
+    padding: 5px;
+    text-align: left;
+    border-radius: 3px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    font-size: 1vw;
+    width: 15vw;
+    height: 3vh;
 }
 
-th, td {
-    padding: 5px;
-    width: 6vw;
-    height: 2.5vw;
-    text-align: left;
-}
 
 caption {
     padding: .7vw;
@@ -103,6 +123,7 @@ caption {
     margin-bottom: 5px;
     color: white;
     background-color:#1d1d1d;
+    border-radius: 3px;
 }
 
 @media (max-width: 600px) {
@@ -112,6 +133,7 @@ caption {
     }
     #tableContainer {
         padding: 5vw;
+        overflow-x: scroll;
     }
     .form-container label {
         margin-top: 5vw;
@@ -126,5 +148,15 @@ caption {
     }
     caption {
         padding: 1.5vw;
+    }
+    table {
+    overflow-x: scroll;
+    }
+    table, th, td {
+        padding: 5px 8px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        font-size: 2.5vw;
+        width: 15vw;
     }
 }
