--- a/style.css
+++ b/style.css
@@ -71,13 +71,9 @@ body {
 }
 
 #tableContainer {
-    min-width: 95%;
-    padding: 1vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    min-width: 100%;
+    height: 100%;
     overflow: auto;
-    
 }
 ::-webkit-scrollbar{
     width: 6px;
@@ -93,12 +89,11 @@ body {
 }
 
 table {
-    width: 100vw;
+    width: 100%;
     height: 100%;
     margin-bottom: 20px;
     background:#1d1d1d;
     margin-top: 3vw;
-    overflow: scroll;
     /* table-layout: fixed; */
 }
 
@@ -108,12 +103,8 @@ table, th, td {
     padding: 5px;
     text-align: left;
     border-radius: 3px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
     overflow: hidden;
     font-size: 1vw;
-    width: 15vw;
-    height: 3vh;
 }
 
 
@@ -132,7 +123,7 @@ caption {
         padding-top: 8vw;
     }
     #tableContainer {
-        padding: 5vw;
+        padding: 3vw;
         overflow-x: scroll;
     }
     .form-container label {
@@ -151,12 +142,10 @@ caption {
     }
     table {
     overflow-x: scroll;
+    
     }
     table, th, td {
         padding: 5px 8px;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        font-size: 2.5vw;
-        width: 15vw;
+        font-size: 3vw;
     }
 }
